Bug 363437 - Edit field looses focus after closing one of Editor's/Viewer's tab
Summary: Edit field looses focus after closing one of Editor's/Viewer's tab
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: krviewer (other bugs)
Version First Reported In: 2.4.0-beta3 "Single Step"
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-23 15:18 UTC by Valdas
Modified: 2018-05-06 00:16 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Valdas 2016-05-23 15:18:19 UTC
I can always reproduce this behavior:
 - start Krusader;
 - navigate in to folder with some files;
 - focus one file and hit F4 (edit);
 - Editor window opens where you can see blinking cursor: editor field has focus, it reacts to typing;
 - Alt+Tab to to main Krusader's window;
 - focus second file and hit F3 (view);
 - when Viewer opens (in same window as Editor but in second tab) close it by hitting Esc;
 - main Krusader's window pops in to front;
 - Alt+Tab to Editor's window (where earlier file was opened for editing);
 - now you see focused Editor's window (you can tell from window's header); this time cursor is not blinking and typing goes to nowhere; you must click with mouse on to text field or hit Tab to bring focus to text field; if there is more than one tab opened then you can switch between them using Left and Right keys.

Reproducible: Always


Actual Results:  
After closing one tab focus jumps to headers of remaining tab/tabs.

Expected Results:  
Focus must stay in text field.
Comment 1 Miroslav Milanović 2017-07-22 09:28:15 UTC
I can confirm this issue. This issue is also related to 376372. I would like to solve this little issue.
Comment 2 Alex Bikadorov 2017-08-05 18:00:43 UTC
I cannot really confirm the behaviour. When closing a tab, the focus in the other tab stays in the text area. But I noticed you can switch the focus between text area and tabbar with META+Tab. Maybe you just have problems with the shortcuts?
Comment 3 Alex Bikadorov 2017-08-05 18:14:23 UTC
Git commit 4f0fbcb507bbbc68b6f0d2bf7bb7b95727fd6936 by Alexander Bikadorov, on behalf of Miroslav Milanovic.
Committed on 05/08/2017 at 18:13.
Pushed by abikadorov into branch 'master'.

KrViewer looses focus - fixed

FIXED: [363437] Edit field looses focus after closing one of Editor's/Viewer's tab
Related: bug 376372
FIXED: [376372] KrViewer window loses focus on closing tabs

Differential Revision: https://phabricator.kde.org/D6850

M  +0    -5    krusader/KViewer/krviewer.cpp

https://commits.kde.org/krusader/4f0fbcb507bbbc68b6f0d2bf7bb7b95727fd6936