KrViewer looses focus - fixed

FIXED: [363437] Edit field looses focus after closing one of Editor's/Viewer's tab
BUG: 363437
FIXED: [376372] KrViewer window loses focus on closing tabs
BUG: 376372

Differential Revision: https://phabricator.kde.org/D6850